--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.0
+  get: ^4.6.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,9 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/daor_logo_svg/
+    - assets/images/dor_logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
