getx di manager

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ google-services.json
 
 # Android Profiling
 *.hprof
+.dart_tool/package_config.json
+.dart_tool/package_config_subset
+.dart_tool/version
+.flutter-plugins
+.flutter-plugins-dependencies
