--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   equatable: ^2.0.0
   get: ^4.6.5
   shared_preferences: ^2.0.15
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.6
 
 
 
