--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   equatable: ^2.0.0
   get: ^4.6.5
   shared_preferences: ^2.0.15
-
+  json_serializable: ^6.5.4
+  json_annotation: ^4.7.0
 
 
 
@@ -46,6 +47,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
