--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_svg: ^1.1.0
   shimmer: ^2.0.0
 
+  # routing
+  auto_route: ^5.0.4
+
+
+
 
 
 
@@ -52,6 +57,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.3.3
+  auto_route_generator: ^5.0.3
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
