--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: ^3.0.1
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  bloc_concurrency: ^0.2.0
   equatable: ^2.0.0
   get: ^4.6.5
   shared_preferences: ^2.0.15
