--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,11 @@ dependencies:
 
 
 
+
+
+
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -59,7 +64,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.3.3
-  auto_route_generator: ^5.0.3
+  golden_toolkit: ^0.15.0
+
+
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
