--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+
   build_runner: ^2.3.3
+
   auto_route_generator: ^5.0.3
 
 
