--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Gradle files
 .gradle/
-build
-
+/build
+/test/golden_tests/failures
+/test/golden_tests/goldens
 # Local configuration file (sdk path, etc)
 local.properties
 
