--- a/packages/cloud_messaging_service/pubspec.yaml
+++ b/packages/cloud_messaging_service/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   
   firebase_core: ^1.20.0
   firebase_messaging: ^12.0.1
+
+  path_provider: ^2.0.14
+  http: ^0.13.5
   
   flutter:
     sdk: flutter
