--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
+  golden_toolkit: any
   build_runner: ^2.3.3
 
   auto_route_generator: ^5.0.3
@@ -76,6 +77,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.1
 
 flutter:
 
